add dataset for cubes and comments in script.js

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="options flex justify-center">
         <div class="buttons w-4/12 flex justify-end">
             <button class="start text-indigo-200 rounded-xl bg-green-800 p-2 transition duration-300 hover:bg-green-700 transform hover:scale-110 w-4/12 font-bold uppercase mx-2">Start</button>
-            <button class="new-game text-indigo-200 rounded-xl bg-blue-800 p-2 w-4/12 transition duration-300 hover:bg-blue-700 transform hover:scale-110 font-bold uppercase mx-2">New game</button>
+            <button class="new-game text-indigo-200 rounded-xl bg-blue-800 p-2 w-4/12 transition duration-300 hover:bg-blue-700 transform hover:scale-110 font-bold uppercase mx-2" disabled>New game</button>
         </div>
         <div class="records w-8/12 flex justify-center items-center">
             <label for="points">
