add logic for timer and scores, add cubes interactions

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </label>
             <label for="time">
                 Time
-                <input id="time" type="text" class="left-time p-2 border-2 rounded-lg text-center mx-2" value="01:00" readonly>
+                <input id="time" type="text" class="time p-2 border-2 rounded-lg text-center mx-2" value="01:00" readonly>
             </label>
         </div>
     </div>
